2006-06-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Release.py (version): Mark 0.7.2 version to start
	testing for release on 06/06.

2006-05-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* scripts/irunner: thin script interface so users don't have to
	find the module and call it as an executable, since modules rarely
	live in people's PATH.

	* IPython/irunner.py (InteractiveRunner.__init__): added
	delaybeforesend attribute to control delays with newer versions of
	pexpect.  Thanks to detailed help from pexpect's author, Noah
	Spurrier <noah-AT-noah.org>.  Noted how to use the SAGE runner
	correctly (it works in NoColor mode).

	* IPython/iplib.py (handle_normal): fix nasty crash reported on
	SAGE list, from improper log() calls.

2006-05-31  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py, Magic.py (magic_upgrade): call upgrade_dir
	with args in parens to work correctly with dirs that have spaces.

2006-05-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Logger.py (Logger.logstart): add option to log raw input
	instead of the processed one.  A -r flag was added to the
	%logstart magic used for controlling logging.

2006-05-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.__init__): add check for the
	*BSDs to omit --color from all 'ls' aliases, since *BSD ls doesn't
	recognize the option.  After a bug report by Will Maier.  This
	closes #64 (will do it after confirmation from W. Maier).

	* IPython/irunner.py: New module to run scripts as if manually
	typed into an interactive environment, based on pexpect.  After a
	submission by Ken Schutte <kschutte-AT-csail.mit.edu> on the
	ipython-user list.  Simple unittests in the tests/ directory.

	* tools/release: add Will Maier, OpenBSD port maintainer, to
	recepients list.  We are now officially part of the OpenBSD ports:
	http://www.openbsd.org/ports.html !  Many thanks to Will for the
	work.
